bug fixes spacings from home

--- a/src/app/components/feedback-form/feedback-form.component.scss
+++ b/src/app/components/feedback-form/feedback-form.component.scss
@@ -6,7 +6,7 @@
 }
 .header {
   height: 100px;
-  background: #3f51b5;
+  background: #2c3d73;
 }
 .mat-dialog-container {
  padding: 0px;
